welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:27: error: value ! is not a member of Int
  	} while (getX ! = 0)
                      ^